syntax = "proto3";
package ostracon.abci;

option go_package = "github.com/Finschia/ostracon/abci/types";

// For more information on gogo.proto, see:
// https://github.com/gogo/protobuf/blob/master/extensions.md
import "tendermint/crypto/proof.proto";
import "tendermint/types/params.proto";
import "tendermint/abci/types.proto";
import "tendermint/types/types.proto";
import "ostracon/types/types.proto";
import "tendermint/crypto/keys.proto";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

// This file is copied from http://github.com/tendermint/abci
// NOTE: When using custom types, mind the warnings.
// https://github.com/gogo/protobuf/blob/master/custom_types.md#warnings-and-issues

//----------------------------------------
// Request types

message Request {
  oneof value {
    tendermint.abci.RequestEcho               echo                 = 1;
    tendermint.abci.RequestFlush              flush                = 2;
    tendermint.abci.RequestInfo               info                 = 3;
    tendermint.abci.RequestSetOption          set_option           = 4;
    tendermint.abci.RequestInitChain          init_chain           = 5;
    tendermint.abci.RequestQuery              query                = 6;
    RequestBeginBlock                         begin_block          = 7;
    tendermint.abci.RequestCheckTx            check_tx             = 8;
    tendermint.abci.RequestDeliverTx          deliver_tx           = 9;
    tendermint.abci.RequestEndBlock           end_block            = 10;
    tendermint.abci.RequestCommit             commit               = 11;
    tendermint.abci.RequestListSnapshots      list_snapshots       = 12;
    tendermint.abci.RequestOfferSnapshot      offer_snapshot       = 13;
    tendermint.abci.RequestLoadSnapshotChunk  load_snapshot_chunk  = 14;
    tendermint.abci.RequestApplySnapshotChunk apply_snapshot_chunk = 15;

    // L2 extended fields
    RequestGetAppHash         get_app_hash         = 16;
    RequestGenerateFraudProof generate_fraud_proof = 17;
    RequestVerifyFraudProof   verify_fraud_proof   = 18;

    RequestBeginRecheckTx                     begin_recheck_tx     = 1000;  // 16~99 are reserved for merging original tendermint
    RequestEndRecheckTx                       end_recheck_tx       = 1001;
  }
}

message RequestBeginBlock {
  bytes                          hash                    = 1;
  tendermint.types.Header        header                  = 2 [(gogoproto.nullable) = false];
  tendermint.abci.LastCommitInfo last_commit_info        = 3 [(gogoproto.nullable) = false];
  repeated tendermint.abci.Evidence byzantine_validators = 4 [(gogoproto.nullable) = false];

  // *** Ostracon Extended Fields ***
  ostracon.types.Entropy entropy = 1000 [(gogoproto.nullable) = false];
}

message RequestBeginRecheckTx {
  tendermint.types.Header header = 1 [(gogoproto.nullable) = false];
}

message RequestEndRecheckTx {
  int64 height = 1;
}

// Gets the current appHash
message RequestGetAppHash {}

// Generates a fraud proof
message RequestGenerateFraudProof {
  RequestBeginBlock begin_block_request = 1 [(gogoproto.nullable) = false];
  repeated tendermint.abci.RequestDeliverTx deliver_tx_requests = 2;
  tendermint.abci.RequestEndBlock end_block_request = 3;
}

// Verifies a fraud proof
message RequestVerifyFraudProof {
  FraudProof fraud_proof = 1;
  bytes expected_valid_app_hash = 2;
}

//----------------------------------------
// Response types

message Response {
  oneof value {
    tendermint.abci.ResponseException          exception            = 1;
    tendermint.abci.ResponseEcho               echo                 = 2;
    tendermint.abci.ResponseFlush              flush                = 3;
    tendermint.abci.ResponseInfo               info                 = 4;
    tendermint.abci.ResponseSetOption          set_option           = 5;
    tendermint.abci.ResponseInitChain          init_chain           = 6;
    tendermint.abci.ResponseQuery              query                = 7;
    tendermint.abci.ResponseBeginBlock         begin_block          = 8;
    ResponseCheckTx                            check_tx             = 9;
    tendermint.abci.ResponseDeliverTx          deliver_tx           = 10;
    tendermint.abci.ResponseEndBlock           end_block            = 11;
    tendermint.abci.ResponseCommit             commit               = 12;
    tendermint.abci.ResponseListSnapshots      list_snapshots       = 13;
    tendermint.abci.ResponseOfferSnapshot      offer_snapshot       = 14;
    tendermint.abci.ResponseLoadSnapshotChunk  load_snapshot_chunk  = 15;
    tendermint.abci.ResponseApplySnapshotChunk apply_snapshot_chunk = 16;

    // L2 extended fields
    ResponseGetAppHash         get_app_hash         = 17;
    ResponseGenerateFraudProof generate_fraud_proof = 18;
    ResponseVerifyFraudProof   verify_fraud_proof   = 19;

    ResponseBeginRecheckTx                     begin_recheck_tx     = 1000;  // 17~99 are reserved for merging original tendermint
    ResponseEndRecheckTx                       end_recheck_tx       = 1001;
  }
}

message ResponseCheckTx {
  uint32   code                         = 1;
  bytes    data                         = 2;
  string   log                          = 3;  // nondeterministic
  string   info                         = 4;  // nondeterministic
  int64    gas_wanted                   = 5 [json_name = "gas_wanted"];
  int64    gas_used                     = 6 [json_name = "gas_used"];
  repeated tendermint.abci.Event events = 7
      [(gogoproto.nullable) = false, (gogoproto.jsontag) = "events,omitempty"];
  string codespace = 8;
  string sender    = 9;   // MEMO: not used, just reservation to implement https://github.com/tendermint/tendermint/pull/6740 first
  int64  priority  = 10;  // MEMO: not used, just reservation to implement https://github.com/tendermint/tendermint/pull/6740 first

  // mempool_error is set by Ostracon.
  // ABCI applictions creating a ResponseCheckTX should not set mempool_error.
  string mempool_error = 11;
}

message ResponseBeginRecheckTx {
  uint32 code = 1;
}

message ResponseEndRecheckTx {
  uint32 code = 1;
}

message ResponseGetAppHash {
  bytes app_hash = 1;
}

message ResponseGenerateFraudProof {
  FraudProof fraud_proof = 1;
}

message ResponseVerifyFraudProof {
  bool success = 1;
}

// Represents a single-round fraudProof
message FraudProof {
  int64 block_height = 1;
  bytes pre_state_app_hash = 2;
  bytes expected_valid_app_hash = 3;
  map<string, StateWitness> state_witness = 4;

  RequestBeginBlock fraudulent_begin_block = 5;
  tendermint.abci.RequestDeliverTx fraudulent_deliver_tx = 6;
  tendermint.abci.RequestEndBlock fraudulent_end_block = 7;
}

// State witness with a list of all witness data
message StateWitness {
  // store level proof
  tendermint.crypto.ProofOp proof = 1;
  // substore level hash
  bytes root_hash = 2;
  // List of witness data
  repeated WitnessData witness_data = 3;
}

// Witness data containing a key/value pair and a Merkle proof for said key/value pair
message WitnessData {
  Operation operation = 1;
  bytes key = 2;
  bytes value = 3;
  repeated tendermint.crypto.ProofOp proofs = 4;
}

enum Operation {
  WRITE     = 0 [(gogoproto.enumvalue_customname) = "write"];
  READ      = 1 [(gogoproto.enumvalue_customname) = "read"];
  DELETE    = 2 [(gogoproto.enumvalue_customname) = "delete"];
}

//----------------------------------------
// Service Definition

service ABCIApplication {
  rpc Echo(tendermint.abci.RequestEcho) returns (tendermint.abci.ResponseEcho);
  rpc Flush(tendermint.abci.RequestFlush) returns (tendermint.abci.ResponseFlush);
  rpc Info(tendermint.abci.RequestInfo) returns (tendermint.abci.ResponseInfo);
  rpc SetOption(tendermint.abci.RequestSetOption) returns (tendermint.abci.ResponseSetOption);
  rpc DeliverTx(tendermint.abci.RequestDeliverTx) returns (tendermint.abci.ResponseDeliverTx);
  rpc CheckTx(tendermint.abci.RequestCheckTx) returns (ResponseCheckTx);
  rpc Query(tendermint.abci.RequestQuery) returns (tendermint.abci.ResponseQuery);
  rpc Commit(tendermint.abci.RequestCommit) returns (tendermint.abci.ResponseCommit);
  rpc InitChain(tendermint.abci.RequestInitChain) returns (tendermint.abci.ResponseInitChain);
  rpc BeginBlock(RequestBeginBlock) returns (tendermint.abci.ResponseBeginBlock);
  rpc EndBlock(tendermint.abci.RequestEndBlock) returns (tendermint.abci.ResponseEndBlock);
  rpc ListSnapshots(tendermint.abci.RequestListSnapshots) returns (tendermint.abci.ResponseListSnapshots);
  rpc OfferSnapshot(tendermint.abci.RequestOfferSnapshot) returns (tendermint.abci.ResponseOfferSnapshot);
  rpc LoadSnapshotChunk(tendermint.abci.RequestLoadSnapshotChunk) returns (tendermint.abci.ResponseLoadSnapshotChunk);
  rpc ApplySnapshotChunk(tendermint.abci.RequestApplySnapshotChunk) returns (tendermint.abci.ResponseApplySnapshotChunk);
  rpc BeginRecheckTx(RequestBeginRecheckTx) returns (ResponseBeginRecheckTx);
  rpc EndRecheckTx(RequestEndRecheckTx) returns (ResponseEndRecheckTx);
  rpc GetAppHash(RequestGetAppHash) returns (ResponseGetAppHash);
  rpc GenerateFraudProof(RequestGenerateFraudProof) returns (ResponseGenerateFraudProof);
  rpc VerifyFraudProof(RequestVerifyFraudProof) returns (ResponseVerifyFraudProof);
}
